[project]
name = "born-portal"
version = "0.1.0"
description = "Born portal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blacksheep>=2.6.2",
    "granian[uvloop,reload]>=2.7.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
]

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[project.scripts]
app = "born_portal.main:main"
